分层架构设计

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">My Application</string>
+    <string name="getInfo">后台对象获取</string>
+    <string name="setInfo">前台对象保存</string>
 </resources>
