--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,6 @@
     <string name="activity_user_goods_goods_kind">类别:</string>
     <string name="activity_user_goods_add_to_shopping_cart">添加到购物车</string>
 
+    <string name="activity_goods_details_goods_amounts">数量(件):</string>
+    <string name="activity_goods_details_add_shopping_cart">加入购物车</string>
 </resources>
