--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -87,4 +87,12 @@
     <string name="activity_user_info_modify_cancel_modify">取消修改</string>
     <string name="activity_user_info_modify_submit_modify">提交修改</string>
 
+    <string name="activity_my_order_management_order_status">订单状态:</string>
+
+    <string name="activity_my_order_management_listitem_order_id">订单编号:</string>
+    <string name="activity_my_order_management_listitem_account">实付款(元):</string>
+    <string name="activity_my_order_management_listitem_order_datetime">下单时间:</string>
+    <string name="activity_my_order_management_listitem_order_status">订单状态:</string>
+    <string name="activity_my_order_management_listitem_mark">X</string>
+
 </resources>
