--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -59,6 +59,8 @@
     <string name="tab_activity_user_my">我的</string>
     <string name="tab_activity_user_logout">退出</string>
 
+
+    <string name="activity_user_goods_goods_search">输入商品名/商品类别搜索</string>
     <string name="activity_user_goods_goods_kind">类别:</string>
     <string name="activity_user_goods_add_to_shopping_cart">添加到购物车</string>
 
@@ -94,5 +96,9 @@
     <string name="activity_my_order_management_listitem_order_datetime">下单时间:</string>
     <string name="activity_my_order_management_listitem_order_status">订单状态:</string>
     <string name="activity_my_order_management_listitem_mark">X</string>
+
+    <string name="titlebar_search_search_keyword">请输入搜索关键字</string>
+    <string name="titlebar_search_search">搜索</string>
+
 
 </resources>
