--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,5 +100,13 @@
     <string name="titlebar_search_search_keyword">请输入搜索关键字</string>
     <string name="titlebar_search_search">搜索</string>
 
+    <string name="activity_order_details_order_id">订单编号:</string>
+    <string name="activity_order_details_order_account">实付款(元):</string>
+    <string name="activity_order_details_order_datetime">下单时间:</string>
+    <string name="activity_order_details_order_status">订单状态:</string>
+    <string name="activity_order_details_mark">X</string>
+    <string name="activity_order_details_back">返回</string>
+
+    <string name="activity_my_order_management_order_search">输入商品名/商品编号/订单号搜索</string>
 
 </resources>
